<resources>
    <string name="app_name">Tax Calculator</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="Okay">Okay</string>
    <string name="cancel">Cancel</string>

    <string name="retry">Retry</string>
    <string name="settings">Settings</string>
    <string name="made_with_u2764_in_musarayy">Made with ❤ in MusaRayy</string>
    <string name="click_exit_msg">Press BACK once again to exit the app</string>
    <string name="progress_bar_message">Please wait, We processing your request…</string>
    <string name="update_msg">%s recommends that you to update the latest version.</string>
    <string name="no_internet">There is no internet connection. Please make sure WI-FI or Cellular data is turned on, Then try again</string>
    <string name="update">Update</string>
    <string name="not_now">Not Now</string>
    <string name="enter_your_gross_salary">Enter Your Gross Salary</string>
    <string name="calculate">Calculate</string>
    <string name="traditional_tax_info">Traditional Tax Structure</string>
    <string name="new_tax_info">New Tax Structure</string>
    <string name="select_your_age">Select your age</string>
    <string name="rate_of_tax">Rate Of Tax</string>
    <string name="income_slab">Income Slab</string>
    <string-array name="tax_fy_year">
        <item>FY 2022 – 2023</item>
        <item>FY 2023 – 2024</item>
    </string-array>

    <string-array name="age_range">
        <item>Age below 60</item>
        <item>Age 60 – 80</item>
        <item>Age 80 above</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="min_gross_salary_error">Minimum Gross Salary should be 2Lakh</string>
    <string name="invalid_amount">Invalid Amount</string>
    <string name="gross_ctc">Gross CTC is </string>
    <string name="monthly_salary_split_up">&amp; Monthly Pay</string>
    <string name="special_allowances_is_40">=&#160;&#160;&#160;&#160;40% of Special Allowances</string>
    <string name="pf_is_12">=&#160;&#160;&#160;&#160;PF is 12% of Basic Pay </string>
    <string name="hra_is_20">=&#160;&#160;&#160;&#160;20% of HRA</string>
    <string name="basic_pay_is_40">=&#160;&#160;&#160;&#160;40% of Basic pay</string>
    <string name="total_montly_salary">=&#160;&#160;&#160;&#160; Total Monthly Salary</string>
    <string name="profes_tax">208</string>
    <string name="take_home_pay">Your Take Home Salary</string>
    <string name="professional_tax">=&#160;&#160;&#160;&#160; Professional Tax</string>
    <string name="now_your_yearly_tax_able_income_is_s">Now Your yearly Tax able income is %s which comes under %s Tax Slab</string>
    <string name="favorite">Favorite</string>
</resources>